# m_nowplaying

./: Cargo.toml  README.md  nowplaying.mrc
.github/workflows/: ci.yml
src/: client.rs  lib.rs  mirc.rs
