[package]
name = "m_nowplaying"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
windows = { version = "0.62.0", features = [
  "Win32",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Foundation",
  "Media_Control"
] }
debug_print = { version = "1.0.0" }
