[package]
name = "m_nowplaying"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
debug_print = { version = "1.0.0" }
mirust = { version = "0.2" }
windows = { version = "0.62.0", features = [
  "Win32",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Foundation",
  "Media_Control"
] }
